Fixed vulnerability issues in the dependecies by using stable versions